contrast color issue

--- a/chamber/styles/directory_large.css
+++ b/chamber/styles/directory_large.css
@@ -528,7 +528,7 @@ input[type="radio"] {
 .membership-card a.modal-link {
     display: inline-block;
     margin-top: 0.7rem;
-    color: var(--secondary-color);
+    color: var(--primary-color);
     font-weight: bold;
     text-decoration: underline;
     cursor: pointer;
